# EasyQR

./: .gitignore  README.md  main.py  pyproject.toml
easyqr/: __init__.py  _enum.py  commons.py  utils.py
easyqr/barcode_encoder/: __init__.py  _constants.py  _trs.py  configs.py  encode.py  encoder.py
easyqr/common/: __init__.py  _constants.py  _enum.py  _trs.py  _utils.py  base_encoder.py  configs.py
easyqr/encoder/: configs.py  encode.py
easyqr/qrcode_encoder/: __init__.py  _constants.py  _trs.py  configs.py  constants.py  encode.py  widget.py
